--- a/angular.json
+++ b/angular.json
@@ -61,7 +61,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "demo-class:build"
+            "browserTarget": "demo-class:build",
+            "proxyConfig": "src/proxy.conf.json"
           },
           "configurations": {
             "production": {
